Closed Bug 417317 Opened 18 years ago Closed 17 years ago

Certain types of LISTITEM accessibles no longer get attributes set like "x of y", regression from fix for bug 389926.

Categories

(Core :: Disability Access APIs, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9beta4

People

(Reporter: MarcoZ, Assigned: surkov)

References

Details

(Keywords: access, regression)

Attachments

(1 file, 2 obsolete files)

After the fix for bug 389926 landed, certain types of LISTITEM accessibles have lost their properties such as "x of y" etc. Common places are: 1. Location Bar AutoComplete list 2. Download Manager list of files, or any other RICHLISTITEM. 3. Tools/Options Tab List items. Regression range: build 2008-02-11 is OK, 2008-02-12 is broken. I found the breackage by backing out each of the 3 A11Y patches that were committed during that period, and rebuilding.
Surkov, should we back this out or do you have a quick fix?
I just found that this completely breaks about:config. So I'd vote for backing it out so tomorrow's nightly is clean again, and revise the original patch.
(In reply to comment #2) > I just found that this completely breaks about:config. So I'd vote for backing > it out so tomorrow's nightly is clean again, and revise the original patch. Oops sorry, about:config brings up a different kind of control now than I was used to. Navigation inside it is slower "by design", and this checkin didn't change that. Sorry about the spam and the implication!
I'll try to come with fix today. It should be easy enough.
Attached patch patch (obsolete) — Splinter Review
Attachment #303447 - Flags: review?(marco.zehe)
Comment on attachment 303447 [details] [diff] [review] patch Yes that fixes it, r=me, thanks!
Attachment #303447 - Flags: review?(marco.zehe) → review+
Attachment #303447 - Attachment is obsolete: true
Attachment #303530 - Flags: review?(marco.zehe)
Comment on attachment 303530 [details] [diff] [review] patch2 [with mochitest] r=me, thanks!
Attachment #303530 - Flags: review?(marco.zehe) → review+
Status: NEW → ASSIGNED
Attachment #303530 - Flags: approval1.9?
Attachment #303530 - Flags: approval1.9? → approval1.9+
Attached patch patch3 (obsolete) — Splinter Review
Attachment #303530 - Attachment is obsolete: true
Comment on attachment 303530 [details] [diff] [review] patch2 [with mochitest] sorry, I marked this obsolete by mistake
Attachment #303530 - Attachment is obsolete: false
Comment on attachment 304180 [details] [diff] [review] patch3 patch from antoerh bug
Attachment #304180 - Attachment is obsolete: true
checked in
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Verified using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b4pre) Gecko/2008022005 Minefield/3.0b4pre
Status: RESOLVED → VERIFIED
mochitest is in patch. in-testsuite+
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: