Bug 417317 - Certain types of LISTITEM accessibles no longer get attributes set like "x of y", regression from fix for bug 389926, r=marcoz, a=mtschrep